toml-pretty-deser/compilation_failure_tests/absorb_remaining_wrong_type_hashmap.stderr
error: `HashMap` is not supported as a tpd map field type; use `IndexMap<K, V>` from the `indexmap` crate instead
  --> compilation_failure_tests/absorb_remaining_wrong_type_hashmap.rs:10:12
   |
10 |     extra: HashMap<String, String>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> compilation_failure_tests/absorb_remaining_wrong_type_hashmap.rs:2:5
  |
2 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
